# nomad-book

./: README.md  main.py  pyproject.toml  yoyo.ini
migrations/: 001_create_users.sql  001_create_usuario.sql  002_create_viagem.sql  002_create_viagens.sql  003_create_roteiro.sql  01_create_user.sql  02_create_roteiro.sql  3_create_viagem.sql
nomadbook/db/: connection.py  roteiro.py  usuario.py  viagem.py
nomadbook/model/: Roteiro.py  Usuario.py  Viagem.py  nomadbook.py
