[tool.poetry]
name = "nomad-book"
version = "0.1.0"
description = ""
authors = ["katewitkoski <ka.lwitkoski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg-binary = "^3.2.1"
fastapi = "^0.114.1"
yoyo-migrations = "^9.0.0"
psycopg = "^3.2.3"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
